--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bikcraft - Bicicletas Elétricas</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header-bg">
@@ -20,7 +23,6 @@
     </nav>
   </div>
   </header>
-
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
