--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="introducao-conteudo">
       <h1>Bicicletas feitas sob medida<span class="detalhe-ponto">.</span></h1>
       <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-      <a href="./bicicletas.html">Selecione a sua</a>
+      <a class="botao" href="./bicicletas.html">Selecione a sua</a>
     </div>
     <div>
       <img src="img/bicicletas/introducao.jpg" alt="">
