--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
       <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
     <nav aria-label="primaria">
-      <ul class="header-menu">
+      <ul class="header-menu cor-0">
         <li><a href="./bicicletas.html">Bicicletas</a></li>
         <li><a href="./seguros.html">Seguros</a></li>
         <li><a href="./contato.html">Contato</a></li>
@@ -26,8 +26,8 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-      <h1>Bicicletas feitas sob medida<span class="detalhe-ponto">.</span></h1>
-      <p>Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+      <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span class="primaria-1">.</span></h1>
+      <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
       <a class="botao" href="./bicicletas.html">Selecione a sua</a>
     </div>
     <div>
