--- a/index.html
+++ b/index.html
@@ -35,5 +35,32 @@
     </div>  
     </div>
   </main>
+
+  <article class="bicicletas-lista"> 
+    <h2 class="font-1-xxl">escolha a sua<span class="primaria-1">.</span></h2>
+    <ul class="bicicletas-lista-item">
+      <li>
+        <a href="./bicicletas/magic.html">
+        <img src="img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Magig Might</h3>
+        <span class="font-2-m cor-8">R$ 2999</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nimbus.html">
+        <img src="img/bicicletas/ninbus-home.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Nimbus Stark</h3>
+        <span class="font-2-m cor-8">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/nebula.html">
+        <img src="img/bicicletas/nebul-home.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Nebula Cosmic</h3>
+        <span class="font-2-m cor-8">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 </html>
