--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
     <nav aria-label="primaria">
       <ul class="header-menu font-1-m cor-0">
@@ -24,7 +24,7 @@
   </div>
   </header>
   <main class="introducao-bg">
-    <div class="introducao">
+    <div class="introducao container">
       <div class="introducao-conteudo">
       <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="primaria-1">.</span></h1>
       <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -37,7 +37,7 @@
   </main>
 
   <article class="bicicletas-lista"> 
-    <h2 class="font-1-xxl">escolha a sua<span class="primaria-1">.</span></h2>
+    <h2 class="container font-1-xxl">escolha a sua<span class="primaria-1">.</span></h2>
     <ul class="bicicletas-lista-item">
       <li>
         <a href="./bicicletas/magic.html">
