--- a/index.html
+++ b/index.html
@@ -115,5 +115,37 @@
       <span class="font-1-m-b primaria-4">Ana Júlia</span>
     </div>
   </section>
+
+  <article class="seguros-bg">
+    <div class="seguros container">
+      <h2 class="font-1-xxl cor-0">seguros<span class="primaria-1">.</span></h2>
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-5">PRATA</h3>
+        <span class="font-1-xl cor-0">R$ 199<span class="font-1-xs cor-6">mensal</span>
+        </span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08 às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orçamento.html">Assinar agora</a>
+      </div>
+      <div class="seguros-item">
+        <h3 class="font-1-xl primaria-1">OURO</h3>
+        <span class="font-1-xl cor-0">R$ 299<span class="font-1-xs cor-6">mensal</span>
+        </span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência técnica especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura estadual</li>
+          <li>Desconto em lojas parceiras</li>
+          <li>Acesso ao exclusivo Clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orçamento.html">Assinar agora</a>
+      </div>
+    </div>
+  </article>
 </body>
 </html>
