--- a/index.html
+++ b/index.html
@@ -147,5 +147,45 @@
       </div>
     </div>
   </article>
+
+  <footer class="footer-bg">
+    <div class="footer container">
+    <img src="img/bikcraft.svg" alt="Bikcraft">
+    <div class="footer-contato">
+      <h3 class="font-2-l-b cor-0">Contato</h3>
+      <ul class="font-2-m cor-5">
+        <li><a href="tel:+554799999-9999">+55 47 99999-9999
+        </a></li>
+        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com
+        </a></li>
+        <li>Rua Logo ali, 333 - Penha</li>
+        <li>Santa Catarina - SC</li>
+      </ul>
+      <div class="footer-redes">
+        <a href="./">
+          <img src="./img/redes sociais/instagram.svg" alt="">
+        </a>
+        <a href="./">
+          <img src="./img/redes sociais/facebook.svg" alt="">
+        </a>
+        <a href="./">
+          <img src="./img/redes sociais/youtube.svg" alt="">
+        </a>
+      </div>
+    </div>
+    <div class="footer-informacoes">
+      <h3 class="font-2-l-b cor-0">Informações</h3>
+      <nav>
+        <ul class="font-1-m cor-5">
+        <li><a href="./bicicletas.html">Bicicletas</a></li>
+        <li></li><a href="./seguros.html">Seguros</a></li>
+        <li></li><a href="./contato.html">Contato</a></li>
+        <li></li><a href="./termos.html">Termos e Condições</a></li>
+      </ul>
+      </nav>
+    </div>
+    <p class="footer-copy font-2-m cor-6">Bickcraft© Alguns direitos reservados.</p>
+  </div>
+  </footer>
 </body>
 </html>
