--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </div>
     <div class="footer-informacoes">
       <h3 class="font-2-l-b cor-0">Informações</h3>
-      <nav>
+      <nav aria-label="footer">
         <ul class="font-1-m cor-5">
         <li><a href="./bicicletas.html">Bicicletas</a></li>
         <li></li><a href="./seguros.html">Seguros</a></li>
