--- a/termos.html
+++ b/termos.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="header container">
       <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft">
