finalizando paginas de seguros com vantagens e perguntas

--- a/seguros.html
+++ b/seguros.html
@@ -104,6 +104,39 @@
   </div>
   </article>
 
+  <article class="perguntas container">
+      <h2 class="font-1-xxl">perguntas frequentes<span class="primaria-1">.</span></h2>
+      <dl>
+        <div>
+          <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+          <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, MasterCard, ELO e American. Para pagamentos à vista aceitamos PIX e Boleto através do PagSeguro;</dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+          <dd class="font-2-s cor-9">Através dos nossos números que estão na página de contato e nossas redes sociais;</dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+          <dd class="font-2-s cor-9">Temos 10% desconto para pagamentos à vista no pix ou boleto;</dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">Posso comprar as peças separadas?</dt>
+          <dd class="font-2-s cor-9">Temos varias lojas parceiras que vendem peças separadas e sendo cliente do Clube Bikcraft, você consegue desconto em todas 😎;</dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">Qual a garantia que eu tenho?</dt>
+          <dd class="font-2-s cor-9">Após o recebimento da sua Bikcraft, você terá 90 dias de garantia para qualquer problema mecânico ou elétrico que ocorrer com sua Bikcraft;</dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+          <dd class="font-2-s cor-9">Você pode adquirir sua Bikcraft em até 3X no boleto;</dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">Qual tamanho de quadro devo escolher?</dt>
+          <dd class="font-2-s cor-9">Temos uma tabela de tamanhos de quadro de acordo com a sua altura é so conferir qual fica de acordo com a sua 😉;</dd>
+        </div>
+      </dl>
+  </article>
   <footer class="footer-bg">
     <div class="footer container">
     <img src="img/bikcraft.svg" alt="Bikcraft">
