bicicleta interna e estilização

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -55,7 +55,7 @@
             Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nimbus.html.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
             Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/magic.html.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/magic.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
             Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nebula.html.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
         </div>
       </div>
     </div>
