--- a/termos.html
+++ b/termos.html
@@ -13,7 +13,7 @@
 <body id="termos">
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft">
+      <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
     <nav aria-label="primaria">
       <ul class="header-menu font-1-m cor-0">
