--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições.">
-  <title>Nimbus Stark | Bikcraft</title>
+  <title>Nebula Cosmic | Bikcraft</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,18 +28,18 @@
   <main class="titulo-bg">
     <div>
       <div class="titulo container">
-        <p class="font-2-xl cor-5">R$ 4999</p>
-        <h1 class="font-1-xxl cor-0">Nimbus Stark<span class="primaria-1">.</span></h1>
+        <p class="font-2-xl cor-5">R$ 3999</p>
+        <h1 class="font-1-xxl cor-0">Nebula Cosmic<span class="primaria-1">.</span></h1>
       </div>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="">
-        <img src="../img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="">
+        <img src="../img/bicicleta/nebula1.jpg" alt="">
+        <img src="../img/bicicleta/nebula2.jpg" alt="">
+        <img src="../img/bicicleta/nebula3.jpg" alt="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
         <a class="botao" href="../orcamento.html">Comprar agora</a>
         <span class="font-1-xs cor-6"><img src="../img/icons/entrega.svg" alt="">entrega em até 5 dias úteis</span>
@@ -94,10 +94,10 @@
       </li>
      
       <li>
-        <a href="./nebula.html">
-        <img src="../img/bicicletas/nebula-cosmic.jpg" alt="Bicicleta preta">
-        <h3 class="font-1-xl">Nebula Cosmic</h3>
-        <span class="font-2-m cor-8">R$ 3999</span>
+        <a href="./nimbus.html">
+        <img src="../img/bicicletas/nimbus-bici.jpg" alt="Bicicleta preta">
+        <h3 class="font-1-xl">Nimbus Stark</h3>
+        <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
     </ul>
