estilizando o formulario e deixando responsivo

--- a/contato.html
+++ b/contato.html
@@ -67,18 +67,18 @@
           </div>
           <div>
           <label for="telefone">Telefone</label>
-          <input type="tel" name="telefone" id="telefone" placeholder="(47)99999-9999">
+          <input type="text" name="telefone" id="telefone" placeholder="(47)99999-9999">
           </div>
-          <div>
+          <div class="col-2">
             <label for="email">E-mail</label>
           <input type="email" name="email" id="email" placeholder="contato@email.com">
           </div>
-          <div>
+          <div class="col-2">
             <label for="mensagem">Mensagem</label>
           <textarea rows="5" name="mensagem" id="mensagem"
           placeholder="O que você precisa?"></textarea>
           </div>
-          <button class="botao">Enviar mensagem</button>
+          <button class="botao col-2">Enviar mensagem</button>
         </form>
       </section>
     </div>
