--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,6 @@
         <h1 class="font-1-xxl cor-0">nosso contato<span class="primaria-1">.</span></h1>
       </div>
     </div>
-   
     <div class="contato container">
       <section class="contato-dados" aria-label="Endereço">
         <h2 class="font-1-m cor-0">Loja Online</h2>
@@ -83,7 +82,41 @@
       </section>
     </div>
   </main>
-
+  <article class="lojas container">
+    <h2 class="font-1-xxl cor-12">lojas locais<span class="primaria-1">.</span></h2>
+    <div class="lojas-item">
+      <img src="./img/mapas/rj (1).jpg" alt="mapa marcando o Endereçoem Rua Logo Ali, 345 - Penha - Santa Catarina - SC ">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Santa Catarina</h3>
+      <div class="lojas-dados font-2-s cor-8">   
+        <p>Rua Logo Ali, 345</p>
+        <p>Penha</p>
+        <p>Santa Catarina-SC</p>
+      </div>
+      <div class="lojas-dados font-2-s cor-8">
+        <a href="mailto:scvendas@contato.com">scvendas@contato.com</a>
+        <a href="tel:47 99999-9999">47 99999-9999</a>
+      </div>
+      <p class="lojas-tempo font-1-s"><img src="./img/icons/horario.svg" alt="">08h às 18h de seg à dom</p>
+    </div>
+    </div>
+    <div class="lojas-item">
+      <img src="./img/mapas/sp (1).jpg" alt="mapa marcando o Endereçoem Rua Logo lá, 3245 - Penha - São Paulo-SP">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">São Paulo</h3>
+      <div class="lojas-dados font-2-s cor-8">
+        <p>Rua Logo lá, 3245</p>
+        <p>Penha</p>
+        <p>São Paulo-SP</p>
+      </div>
+      <div class="lojas-dados font-2-s cor-8">
+        <a href="mailto:spvendas@contato.com">spvendas@contato.com</a>
+        <a href="tel:11 99999-9999">11 99999-9999</a>
+      </div>
+      <p  class="lojas-tempo font-1-s"><img src="./img/icons/horario.svg" alt="">08h às 18h de seg à dom</p>
+    </div>
+    </div>
+  </article>
   <footer class="footer-bg">
     <div class="footer container">
     <img src="img/bikcraft.svg" alt="Bikcraft">
