--- a/bicicletas.html
+++ b/bicicletas.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições.">
   <title>Bicicletas | Bikcraft</title>
+   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +36,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nimbus-bici.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/nimbus-bici.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -62,7 +63,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic-bici.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/magic-bici.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 2999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -89,7 +90,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nebula-cosmic.jpg" alt="Bicicleta cinza">
+          <img src="./img/bicicletas/nebula-cosmic.jpg" width="1120" height="680" alt="Bicicleta cinza">
           <span class="font-2-m cor-0">R$ 3999</span>
         </div>
         <div class="bicicletas-conteudo">
