--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bikcraft - Bicicletas Elétricas</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +14,7 @@
 <body>
   <header class="header-bg">
     <div class="header container">
-      <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft">
+      <a href="./"><img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
     <nav aria-label="primaria">
       <ul class="header-menu font-1-m cor-0">
@@ -31,9 +32,10 @@
       <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
       <a class="botao" href="./bicicletas.html">Selecione a sua</a>
     </div>
-    <div>
-      <img src="img/bicicletas/introducao.jpg" alt="">
-    </div>  
+    <picture>
+      <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus-bici.jpg">
+      <img src="img/bicicletas/introducao.jpg" alt="" width="1280" height="1600">
+    </picture> 
     </div>
   </main>
 
@@ -74,39 +76,39 @@
 
         <div class="tecnologia-vantagens">
           <div>
-          <img src="img/icons/eletrica.svg" alt="">
+          <img src="img/icons/eletrica.svg" width="24" height="24" alt="">
           <h3 class="font-1-m cor-0">Motor Elétrico</h3>
           <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
         </div>
         <div>
-          <img src="img/icons/rastreador.svg" alt="">
+          <img src="img/icons/rastreador.svg" width="24" height="24" alt="">
           <h3 class="font-1-m cor-0">Rastreador</h3>
           <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.p>
         </div>
         </div>
       </div>
       <div class="tecnologia-imagem">
-        <img src="img/fotos/tecnologia.jpg" alt="">
+        <img src="img/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
       </div>
     </div>
   </article>
   <section class="parceiros" aria-label="Nossos parceiros">
     <h2 class="container font-1-xxl">nossos parceiros<span class="primaria-1">.</span></h2>
     <ul>
-      <li><img src="img/parceiros/caravan.svg" alt="caravan"></li>
-      <li><img src="img/parceiros/ranek.svg" alt="ranek"></li>
-      <li><img src="img/parceiros/handel.svg" alt="handel"></li>
-      <li><img src="img/parceiros/dogs.svg" alt="dogs"></li>
-      <li><img src="img/parceiros/lescone.svg" alt="lescone"></li>
-      <li><img src="img/parceiros/flexblog.svg" alt="flexblog"></li>
-      <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast"></li>
-      <li><img src="img/parceiros/surfbot.svg" alt="surfbot"></li>
+      <li><img src="img/parceiros/caravan.svg" width="140" height="38" alt="caravan"></li>
+      <li><img src="img/parceiros/ranek.svg" width="148" height="36" alt="ranek"></li>
+      <li><img src="img/parceiros/handel.svg" width="161" height="50" alt="handel"></li>
+      <li><img src="img/parceiros/dogs.svg" width="152" height="39" alt="dogs"></li>
+      <li><img src="img/parceiros/lescone.svg" width="208" height="41" alt="lescone"></li>
+      <li><img src="img/parceiros/flexblog.svg" width="164" height="38" alt="flexblog"></li>
+      <li><img src="img/parceiros/wildbeast.svg" width="196" height="34" alt="wildbeast"></li>
+      <li><img src="img/parceiros/surfbot.svg" width="200" height="49" alt="surfbot"></li>
     </ul>
   </section>
 
   <section class="depoimento" aria-label="Depoimento">
     <div>
-      <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+      <img src="img/fotos/depoimento.jpg" width="1560" height="1360"alt="Pessoa pedalando uma bicicleta Bikcraft">
     </div>
     <div class="depoimento-conteudo">
       <blockquote class="font-1-xl primaria-5">
@@ -150,7 +152,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-    <img src="img/bikcraft.svg" alt="Bikcraft">
+    <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
     <div class="footer-contato">
       <h3 class="font-2-l-b cor-0">Contato</h3>
       <ul class="font-2-m cor-5">
