--- a/seguros.html
+++ b/seguros.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições.">
   <title>Seguros | Bikcraft</title>
+   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +45,7 @@
             <li>Suporte 08 às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="botao secundario" href="./orçamento.html">Assinar agora</a>
+          <a class="botao secundario" href="./orcamento.html">Assinar agora</a>
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl primaria-1">OURO</h3>
@@ -58,7 +59,7 @@
             <li>Desconto em lojas parceiras</li>
             <li>Acesso ao exclusivo Clube Bikcraft</li>
           </ul>
-          <a class="botao" href="./orçamento.html">Assinar agora</a>
+          <a class="botao" href="./orcamento.html">Assinar agora</a>
         </div>
       </div>
 
@@ -71,32 +72,32 @@
     <h2 class="font-1-xxl cor-0">nossas vantagens<span class="primaria-1">.</span></h2>
     <ul>
       <li>
-      <img src="./img/icons/eletrica.svg" alt="">
+      <img src="./img/icons/eletrica.svg" width="32" height="32" alt="">
       <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
       <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
     </li>
       <li>
-      <img src="./img/icons/carbono.svg" alt="">
+      <img src="./img/icons/carbono.svg" width="32" height="32" alt="">
       <h3 class="font-1-l cor-0">Reparo de Quadro</h3>
       <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
     </li>
       <li>
-      <img src="./img/icons/sustentavel.svg" alt="">
+      <img src="./img/icons/sustentavel.svg" width="32" height="32" alt="">
       <h3 class="font-1-l cor-0">Sustentável</h3>
       <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
     </li>
       <li>
-      <img src="./img/icons/rastreador.svg" alt="">
+      <img src="./img/icons/rastreador.svg" width="32" height="32" alt="">
       <h3 class="font-1-l cor-0">Recuperação</h3>
       <p class="font-2-s cor-5">Recuperamos Bikcrafts roubadas sem custo adicional para o dono. Se não conseguirmos recuperar, damos uma nova para você.</p>
     </li>
       <li>
-      <img src="./img/icons/seguro.svg" alt="">
+      <img src="./img/icons/seguro.svg" width="32" height="32" alt="">
       <h3 class="font-1-l cor-0">Segurança</h3>
       <p class="font-2-s cor-5">O nosso seguro garante que todo reparo seja feito com peças genuínas e de alta qualidade. Confie na Bikcraft.</p>
     </li>
       <li>
-      <img src="./img/icons/velocidade.svg" alt="">
+      <img src="./img/icons/velocidade.svg" width="32" height="32" alt="">
       <h3 class="font-1-l cor-0">Rapidez</h3>
       <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
     </li>
@@ -139,7 +140,7 @@
   </article>
   <footer class="footer-bg">
     <div class="footer container">
-    <img src="img/bikcraft.svg" alt="Bikcraft">
+    <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
     <div class="footer-contato">
       <h3 class="font-2-l-b cor-0">Contato</h3>
       <ul class="font-2-m cor-5">
