--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -155,5 +155,6 @@
     <p class="footer-copy font-2-m cor-6">Bickcraft© Alguns direitos reservados.</p>
   </div>
   </footer>
+<script src="../js/script.js"></script>
 </body>
 </html>
