--- a/orcamento.html
+++ b/orcamento.html
@@ -179,5 +179,6 @@
     <p class="footer-copy font-2-m cor-6">Bickcraft© Alguns direitos reservados.</p>
   </div>
   </footer>
+<script src="./js/script.js"></script>
 </body>
 </html>
