--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -34,14 +34,14 @@
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/magic1.jpg" alt="">
-        <img src="../img/bicicleta/magic2.jpg" alt="">
-        <img src="../img/bicicleta/magic3.jpg" alt="">
+        <img src="../img/bicicleta/magic1.jpg" alt="Bicicleta preta">
+        <img src="../img/bicicleta/magic2.jpg" alt="Bicicleta preta">
+        <img src="../img/bicicleta/magic3.jpg" alt="Bicicleta preta">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-        <a class="botao" href="../orcamento.html">Comprar agora</a>
+        <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=magic">Comprar agora</a>
         <span class="font-1-xs cor-6"><img src="../img/icons/entrega.svg" alt="">entrega em até 5 dias úteis</span>
         <span class="font-1-xs cor-6"><img src="../img/icons/estoque.svg" alt="">18 bicicletas em estoque</span>
       </div>
