adicionando favicon e melhorando carregamento com disable js

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <title>Bikcraft - Bicicletas Elétricas</title>
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 <body>
   <header class="header-bg">
@@ -25,14 +28,14 @@
     </nav>
   </div>
   </header>
-  <main class="introducao-bg">
+  <main class="introducao-bg" >
     <div class="introducao container">
       <div class="introducao-conteudo">
-      <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="primaria-1">.</span></h1>
-      <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-      <a class="botao" href="./bicicletas.html">Selecione a sua</a>
+      <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">Bicicletas feitas sob medida<span class="primaria-1">.</span></h1>
+      <p class="font-2-l cor-5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+      <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">Selecione a sua</a>
     </div>
-    <picture>
+    <picture data-anime="800" class="fadeInDown">
       <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus-bici.jpg">
       <img src="img/bicicletas/introducao.jpg" alt="" width="1280" height="1600">
     </picture> 
@@ -121,7 +124,7 @@
   <article class="seguros-bg">
     <div class="seguros container">
       <h2 class="font-1-xxl cor-0">seguros<span class="primaria-1">.</span></h2>
-      <div class="seguros-item">
+      <div class="seguros-item fadeInLeft" data-anime="200">
         <h3 class="font-1-xl cor-5">PRATA</h3>
         <span class="font-1-xl cor-0">R$ 199<span class="font-1-xs cor-6">mensal</span>
         </span>
@@ -189,6 +192,7 @@
     <p class="footer-copy font-2-m cor-6">Bickcraft© Alguns direitos reservados.</p>
   </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
 <script src="./js/script.js"></script>
 </body>
 </html>
