--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições.">
   <title>Nimbus Stark | Bikcraft</title>
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="../css/style.css" as="style">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 <body id="bicicleta">
   <header class="header-bg">
@@ -35,8 +38,8 @@
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
         <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta preta">
-        <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta preta">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta preta">
+        <img src="../img/bicicleta/nebula1.jpg" alt="Bicicleta preta">
+        <img src="../img/bicicleta/magic1.jpg" alt="Bicicleta preta">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
