--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <li>Suporte 08 às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao secundario" href="./orçamento.html">Assinar agora</a>
+        <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Assinar agora</a>
       </div>
       <div class="seguros-item">
         <h3 class="font-1-xl primaria-1">OURO</h3>
@@ -148,7 +148,7 @@
           <li>Desconto em lojas parceiras</li>
           <li>Acesso ao exclusivo Clube Bikcraft</li>
         </ul>
-        <a class="botao" href="./orçamento.html">Assinar agora</a>
+        <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Assinar agora</a>
       </div>
     </div>
   </article>
